--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "prettier --ignore-path ./.lintignore . '!data' --check && eslint . --ext .ts --ignore-path ./.lintignore",
     "lint:fix": "prettier --ignore-path ./.lintignore --write . '!data' --check && eslint . --ext .ts --ignore-path ./.lintignore --fix",
-    "start": "bun src/index.ts",
-    "api": "NODE_ENV=api bun src/index.ts"
+    "download": "bun src/index.ts",
+    "start": "NODE_ENV=api bun src/index.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
