--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "prettier --ignore-path ./.lintignore . '!data' --check && eslint . --ext .ts --ignore-path ./.lintignore",
     "lint:fix": "prettier --ignore-path ./.lintignore --write . '!data' --check && eslint . --ext .ts --ignore-path ./.lintignore --fix",
     "download": "bun src/index.ts",
-    "start": "NODE_ENV=api bun src/index.ts"
+    "start": "bun src/api/index.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
